[package]
name = "viering-liamt-cryptography"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
ring = "0.17.8"
rust-crypto = "0.2.36"
shared = { path = "../shared" }
rand = "0.9.0"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
